<resources>
    <string name="app_name">Kamus</string>
    <string name="openDrawer">Drawer Dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Daftar Kata</string>
    <string name="navigation_view_item_2">Penerjemah</string>
    <string name="navigation_view_item_3">Tenses</string>
    <string name="navigation_view_item_4">Irreguler Verbs</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_5">Bagikan</string>
    <string name="navigation_view_item_6">Pengaturan</string>
    <string name="navigasi_kategori_3">Sub Sub Item Navigasi</string>
    <string name="navigation_view_item_7">Bantuan dan masukan</string>
    <string name="navigation_view_item_8">Tentang</string>
    <string name="navigation_view_item_9">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
